<resources>
    <string name="app_name">RawfoodMarket</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="e_mail_caps">E-MAIL</string>
    <string name="phone_number_caps">PHONE NUMBER</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login_caps">LOGIN</string>
    <string name="register_caps">REGISTER</string>
    <string name="or_caps">OR</string>
    <string name="or_separator">------------------------------------------OR-------------------------------------------</string>
    <string name="phone_number">Phone Number</string>
    <string name="indonesian_code">+62</string>
</resources>